# worldofcode.org

./: .gitignore  README.md  docker-compose.yml  docs  eslint.config.js  index.html  netlify.toml  nginx.conf  package.json  pnpm-lock.yaml  stats.html  tsconfig.json  uno.config.ts  vite.config.ts  vocs.config.tsx
.github/instructions/: woc-tutorial.instructions.md
backend/: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  backend.dockerfile  detect.py  docker-compose.yml  example.secrets.toml  frontend.dockerfile  nginx.conf  pyproject.toml  pyproject.toml.bak  settings.toml  wocprofile.json
backend/woc_backend/: __main__.py  common.py  config.py  models.py
backend/woc_backend/auth/: models.py  routes.py
backend/woc_backend/clickhouse/: models.py  routes.py
backend/woc_backend/lookup/: models.py  routes.py
backend/woc_backend/mongo/: models.py  routes.py
backend/woc_backend/mozdemo/: engine.py  routes.py
backend/woc_backend/utils/: cache.py  cleanup.py  email.py  source.py  validate.py
deploy/: README.md  docker-compose.yml  nginx.conf
docs/: README.md  _sidebar.md  capabilities.md  crazy.md  getting_started.md  guide.md  guide_mongo.md  index.html  layout.tsx  license.md  map-types.md  maps.md  old_stuff.md  overview.md  scripts.md  terms.md  test.md  tutorial.md  tutorial_legacy.md  updates.md  woc_hardware.md
docs/pages/blog/: 3074-ggs.md  shuwarin.md  tutorial.md
docs/pages/docs/: index.mdx
frontend/: .env  Dockerfile  README.md  build_docker.sh  package.json  uno.config.ts  vite.config.ts
frontend/public/: _redirects
frontend/public/catalog-data/: README.md  registry.json
frontend/public/docs/: README.md  _sidebar.md  guide_remote.md  overview.md  scripts.md  tutorial.md
frontend/public/impact-data/: README.md  repos.json  summary.json
frontend/public/mozdemo-data/: README.md  examples.json
frontend/scripts/: build-catalog-data.py  build-impact-data.py  build-mozdemo-data.py
frontend/src/: config.ts  main.tsx
frontend/src/api/: auth.ts  lookup.ts  mongo.ts
frontend/src/components/: icon.tsx  navbar.tsx  table-search-input.tsx  theme-toggle.tsx  tooltip-container.tsx
frontend/src/layouts/: navbar-layout.tsx  wave-layout.tsx
frontend/src/lib/: error.ts  utils.ts
frontend/src/pages/: 404.tsx
frontend/src/providers/: index.tsx  user-provider.tsx
frontend/src/styles/: gradient-text.css  grid-container.css  homepage.css  (+1 more)
src/: config.ts  index.css  main.tsx  router.ts  types.ts
src/api/: auth.ts  clickhouse.ts  lookup.ts  models.ts  mongo.ts  request.ts
src/components/: bg-animation.css  bg-animation.tsx  dashboard-nav.tsx  fileupload.tsx  header.tsx  icon.tsx  icons.tsx  mobile-sidebar.tsx  navbar.tsx  popup-modal.tsx  sidebar.tsx
src/constants/: data.ts  routes.ts
src/hooks/: use-toast.ts  use-user.tsx
src/layouts/: dashboard-layout.tsx  navbar-base.tsx  navbar-layout.tsx  wave-layout.tsx
src/lib/: error.ts
src/pages/: index.tsx
src/providers/: index.tsx  storage-provider.tsx  theme-provider.tsx  user-provider.tsx
src/styles/: bg-animation.css  gradient-text.css  homepage.css  index.css
src/types/: md.d.ts
(+97 files in other folders)
